<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_container_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ysn.zodiakan.views.main.MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_content_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corners_white"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp">

        <RelativeLayout
            android:id="@+id/relative_layout_container_full_name_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_icon_full_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/image_view_icon_full_name_user"
                android:src="@drawable/ic_person_accent_dark_24dp" />

            <TextView
                android:id="@+id/text_view_full_name_user_activity_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image_view_icon_full_name_user"
                android:layout_toRightOf="@+id/image_view_icon_full_name_user"
                android:text="@string/full_name"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edit_text_full_name_activity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_full_name_user_activity_main"
                android:layout_toEndOf="@+id/image_view_icon_full_name_user"
                android:layout_toRightOf="@+id/image_view_icon_full_name_user"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_container_birthday_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout_container_full_name_activity_main"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/image_view_icon_birthday_activity_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_view_birthday_user"
                android:paddingEnd="8dp"
                android:paddingLeft="0dp"
                android:paddingRight="8dp"
                android:paddingStart="0dp"
                android:src="@drawable/ic_date_range_accent_dark_24dp" />

            <TextView
                android:id="@+id/text_view_birthday_user_activity_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image_view_icon_birthday_activity_main"
                android:layout_toRightOf="@+id/image_view_icon_birthday_activity_main"
                android:text="@string/birthday"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edit_text_birthday_user_activity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_birthday_user_activity_main"
                android:layout_toEndOf="@+id/image_view_icon_birthday_activity_main"
                android:layout_toRightOf="@+id/image_view_icon_birthday_activity_main"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:inputType="date" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout_container_birthday_activity_main"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            >

            <Button
                android:id="@+id/button_cek_zodiak_activity_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_button_corner_transparent_dark"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/cek_zodiak"
                android:textAllCaps="false"
                android:textColor="#c8a600" />

            <ProgressBar
                android:id="@+id/progress_bar_activity_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
